frontend/src/scenes/ingestion/v2/panels/Panels.scss
.FrameworkPanel {
    max-width: 400px;
}

.bookmarklet-warning {
    border: 2px dashed var(--border);
    padding: 8px;

    p {
        margin-bottom: 0;
    }

    .warning-icon {
        display: flex;
        align-items: center;
        justify-content: center;
        border-right: 2px dashed var(--border);
    }
}

.bookmarklet-steps {
    margin-top: 0.5rem;
}

.panel-footer {
    background-color: white;
    margin-bottom: 1rem;
    bottom: 0;
}

.ingestion-title {
    font-size: 28px;
    font-weight: 700;
    line-height: 40px;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin: 0;
}

.ingestion-listening-for-events {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin-bottom: 1rem;
}

